--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -47,5 +47,5 @@ jobs:
     - name: "Installing Dependencies"
       run: npm i
 
-    - name: "Running test case"
+    - name: "Running test cases"
       run: npm run test
